# sauron

./: Cargo.toml  config.json.template  cron.tab
html/: index.html  main.js
html/vue_components/: access_page.html  entity.html  entity_page.html  main_page.html  search_dropdown.html  user.html
src/: app_state.rs  database_abstraction_layer.rs  database_session_store.rs  db_tables.rs  entity.rs  error.rs  external_system.rs  main.rs
